--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -7,7 +7,7 @@
     tools:context=".MainMenu">
 
     <Button
-        android:id="@+id/InventoryButton"
+        android:id="@+id/inventoryButton"
         android:layout_width="189dp"
         android:layout_height="120dp"
         android:text="Inventory"
