--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -18,41 +18,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.976" />
 
-    <Button
-        android:id="@+id/inventoryMenu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Edit Inventory"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.948"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.976" />
-
     <TextView
-        android:id="@+id/inventoryTitleTextView"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Inventory"
         app:layout_constraintBottom_toTopOf="@+id/inventoryBack"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.024" />
-
-    <TableLayout
-        android:id="@+id/inventoryTableLayout"
-        android:layout_width="400dp"
-        android:layout_height="600dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="51dp"
-        android:layout_marginEnd="2dp"
-        android:layout_marginBottom="82dp"
-        android:background="#B2CDE2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></TableLayout>
+        app:layout_constraintVertical_bias="0.529" />
 </androidx.constraintlayout.widget.ConstraintLayout>
