ditched recyclerview, added sorting to inventory
cleaned up inventory.kt functions and sorting implementation

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,8 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#2196F3"
         android:ems="10"
-        android:hint="IP Address"
+        android:hint="IP Address (10.0.2.2)"
+        android:text="10.0.2.2"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/loginButton"
         app:layout_constraintEnd_toEndOf="parent"
