--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -21,8 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Inventory"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"></TextView>
+            android:layout_marginTop="5dp"></TextView>
 
         <TextView
             android:id="@+id/inventoryHelpTextView"
@@ -32,11 +31,57 @@
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"></TextView>
 
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="@color/purple_200">
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:id="@+id/headerID"
+                android:text="ID"
+                android:paddingVertical="5dp"
+                android:paddingLeft="5dp"
+                android:layout_weight="0.1">
+            </TextView>
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:id="@+id/headerName"
+                android:text="Name"
+                android:paddingVertical="5dp"
+                android:layout_weight="0.6">
+            </TextView>
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:id="@+id/headerQty"
+                android:text="Qty"
+                android:paddingVertical="5dp"
+                android:layout_weight="0.15">
+            </TextView>
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:id="@+id/headerPrice"
+                android:text="Price (per item)"
+                android:paddingVertical="5dp"
+                android:layout_weight="0.">
+            </TextView>
+
+        </LinearLayout>
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scrollbars="vertical"
             android:layout_weight="20">
+
 
             <TableLayout
                 android:id="@+id/inventoryTableLayout"
